feat: implement data_reader.py and data_demo.py and generate demo data

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -66,7 +66,6 @@ This project sets up an algorithmic trading platform which incorporates various 
 
 
 \section{Domain Background}
-the field of research where the project is derived: 
 
 a. automatic trading of equities with predefined algorithms, order placement is determined by algorithms 
 
@@ -80,13 +79,11 @@ d. machine learning and deep learning algorithms can be used
 
 
 \section{Problem Statement}
-a problem being investigated for which a solution will be defined:
 
 given a history of past prices of a stock or other equities, how can we predict its movement directions (upwards or downwards) in the future 
 
 
 \section{Datasets and Inputs}
-data or inputs being used for the problem: 
 
 a. historical daily closed prices of stocks from Yahoo, or high-frequency tick data
 
@@ -94,13 +91,11 @@ b. input will be time series price data of a stock: time-indexed daily closed pr
 
 
 \section{Solution Statement}
-a the solution proposed for the problem given: 
 
 The problem is a classification problem, so I will use supervised learning of classification like logistic regression, SVM, or dicision tree, and deep learning methods like simple neural network or convolutional neural network to tackle the problem.
 
 
 \section{Benchmark Model}
-some simple or historical model or result to compare the defined solution to: 
 
 I will use classical simple trading strategies as benchmark models, which include simple moving average, momentum and mean reversion methods. 
 
@@ -108,15 +103,13 @@ Moreover, I will also compare the machine learning and deep learning methods.
 
 
 \section{Evaluation Metrics}
-functional representations for how the solution can be measured: 
 
 On the machine learning level, I will use accuracy for our classification problem.
 
-ON the algorithmic trading level, I will use the cumulative returns including transaction costs as the evluation metric and compare it with the realized return in a plot.
+On the algorithmic trading level, I will use the cumulative returns including transaction costs as the evluation metric and compare it with the realized return in a plot.
 
 
 \section{Project Design}
-how the solution will be developed and results obtained: 
 
 For the core algorithms, I will use classification algorithms in scikit-learn as well as construct neural networks in TensorFlow or Keras.
 
